# harness

./: .gitignore  .gitlab-ci.yml  AGENT_LOG.md  AI4SE_Final_Project_A_Coding_Agent_Harness.md  PLAN.md  PLAN.zh.md  SPEC.md  SPEC.zh.md  pyproject.toml
.github/workflows/: unit-test.yml
.superpowers/sdd/: progress.md  review-f8da2d1..02a7e7d.diff  review-f8da2d1..0b9944e.diff  review-f8da2d1..2528beb.diff  review-f8da2d1..253cd2f.diff  task-1-brief.md  task-1-report.md  task-10-brief.md  task-10-report.md  task-11-brief.md  task-11-report.md  task-2-brief.md  task-2-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md  task-9-brief.md  task-9-report.md
harness/: __init__.py  actions.py  auth.py  context_engine.py  domain.py  feedback.py  guardrails.py  llm.py  memory.py  profiler.py  repo_index.py  reports.py  runner.py  storage.py  tools.py
tests/: test_actions.py  test_auth_reports.py  test_context_engine.py  test_feedback.py  test_guardrails.py  test_memory.py  test_plan_scope.py  test_profiler.py  test_project_metadata.py  test_repo_index.py  test_runner.py  test_storage.py  test_tools.py
tests/fixtures/sample_repo/: README.md  pyproject.toml
tests/fixtures/sample_repo/src/: calculator.py
tests/fixtures/sample_repo/tests/: test_calculator.py
课件/: AgenticEngineering-with-notes.pptx  agent-loop.htm  pecehe-with-notes.pptx
